[package]
name = "example"
version = "0.1.0"
authors = ["sianh <sianhou1987@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_with_callback = { path = "../async_with_callback" }
minimio = { path = "../minimio" }
